mapeo y muestreo de datos mejorado